--- a/SuperBowlsCrud/src/main/resources/application.properties
+++ b/SuperBowlsCrud/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.mvc.view.suffix: .jsp
 
 #### MYSQL DATASOURCE ####
 ##### Configure to match your Database
-spring.datasource.url=jdbc:mysql://localhost:3306/SuperBowls?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=MST
+spring.datasource.url=jdbc:mysql://localhost:3306/superbowls?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=MST
 spring.datasource.username=superbowluser
 spring.datasource.password=superbowluser
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
